--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <link rel="stylesheet" href="portfolioestilo.css">
     <link rel="icon" href="logo.png" type="image/x-icon">
     <title>Portfolio Emilia</title>
 </head>
   <body>
+    <div class="contenedor-principal">
     <header id="encabezado">
         <nav id="navegacion">
             <div class="container">
@@ -79,5 +80,6 @@
             </div>
         </div>
     </section>
+   </div>
   </body>
 </html>
